# SkillEvolve

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: default.yaml
datas/: docvqa.yaml  hotpotqa.yaml
datas/docvqa/: init_skill.md  sample.json
engine/: __init__.py  trainer.py
evaluation/: __init__.py  gate.py
gradient/: __init__.py  aggregate.py  reflect.py
models/: __init__.py  chat.py  embed.py  responses.py
optimizer/: __init__.py  scheduler.py  select.py  skill.py
prompts/: aggregate.md  apply.md  rank.md  reflect_failure.md  reflect_success.md  rewrite.md
prompts/hotpot/: instruction.md  judge.md
rollouts/: docvqa.py  hotpotqa.py
scripts/: __init__.py  eval.py  train.py
tests/: test_chat.py  test_docvqa.py  test_hotpot.py  test_responses.py
tools/: common.py  image.py  logger.py  retrieve.py
