[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillevolve"
version = "0.1.0"
description = "SkillEvolve: Visual Prompt Evolution & Optimization Framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SkillEvolve Team"},
]
keywords = ["agent", "visual-prompt-optimization", "skill-learning", "LLM", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Claude model backend
claude = ["anthropic>=0.20.0", "json_repair>=0.61.0"]
# Qwen local model backend (via vLLM)
qwen = ["vllm>=0.4.0", "json_repair>=0.61.0"]
# WebUI dashboard
webui = ["gradio>=4.0.0"]
# Development tools
dev = ["ruff>=0.4.0", "pytest>=8.0.0"]
# All optional dependencies
all = [
    "anthropic>=0.20.0",
    "json_repair>=0.61.0",
    "vllm>=0.4.0",
    "gradio>=4.0.0",
]

[project.scripts]
skillevolve-train = "scripts.train:main"
skillevolve-eval = "scripts.eval:main"


[project.urls]
Repository = "https://github.com/your-org/SkillEvolve"
Issues = "https://github.com/your-org/SkillEvolve/issues"

[tool.setuptools.packages.find]
include = ["skillevolve", "skillevolve.*", "scripts*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
