[project]
name = "SkillEvolve"
version = "0.1.0"
description = "This project is used for skll evolve."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.3.5",
    "langchain>=1.2.3",
    "langchain-anthropic>=1.3.1",
    "langchain-community>=0.3.0",
    "langsmith>=0.3.45",
    "langchain-openai>=0.3.0",
    "langgraph>=1.0.6",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.5.0",
    "rich>=13.0.0",
    "streamlit>=1.30.0",
    "matplotlib>=1.30.0",
    "httpx",
    "markdownify",
    "arxiv>=3.0.0",
    "openai>=2.29.0",
    "dspy>=3.2.1",
    "datasets>=4.8.5",
    "volcengine-python-sdk[ark]>=5.0.27",
    "faiss-cpu>=1.14.3",
]

[tool.setuptools.packages.find]
exclude = ["skills*", "sessions*", "tmp*", "outputs*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
